# zkp-rd

./: .gitignore
plonk-research/: Cargo.toml
plonk-research/constraint/: Cargo.toml
plonk-research/constraint/src/: arithmetization.rs  circuit.rs  gate.rs  lib.rs
plonk-research/constraint/src/gate/: arithmetic.rs
plonk-research/iop/: Cargo.toml
plonk-research/iop/src/: lib.rs  prover.rs  snark.rs  transcript.rs  utils.rs
plonk-research/pcs/: Cargo.toml
