[package]
name = "constraint"
description = "Plonk constraint system"
version = "0.1.0"
edition = "2021"
authors = ["baraka"]
license = "MIT"

[dependencies]
ark-ff = {version = "0.3.0", features = ["asm"]}
ark-poly = "0.3.0"
ark-bls12-381 = "0.3.0"
downcast-rs = "1.2.0"
rand_chacha = "0.3.1"
rand = "0.8.5"

